app/envoy/emp_config.yml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-employee-config
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 10000
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                - name: backend
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/v1/employee"
                    route:
                      cluster: employee
                  - match:
                      prefix: "/healthcheck"
                    route:
                      cluster: employee
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
      - name: employee
        connect_timeout: 1s
        type: STATIC
        lb_policy: ROUND_ROBIN
        circuit_breakers:
          thresholds:
            max_connections: 2500
            max_pending_requests: 100
            max_requests: 3000
        load_assignment:
          cluster_name: employee
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 8080
